vlib/v/checker/tests/option_with_match_err.vv
fn main() {
	mut a := ?int(12)
	match a {
		12 { println(a) }
		else { println('else') }
	}
}
